set -mcpu=cortex-a78ae
Signed-off-by: hugo.liu <hugo.liu@siengine.com>

--- a/ggml/CMakeLists.txt
+++ b/ggml/CMakeLists.txt
@@ -194,8 +194,8 @@ set   (GGML_SYCL_DEVICE_ARCH "" CACHE STRING
 option(GGML_OPENCL                          "ggml: use OpenCL"                                OFF)
 option(GGML_OPENCL_PROFILING                "ggml: use OpenCL profiling (increases overhead)" OFF)
 option(GGML_OPENCL_EMBED_KERNELS            "ggml: embed kernels"                             ON)
-option(GGML_OPENCL_USE_ADRENO_KERNELS       "ggml: use optimized kernels for Adreno"          ON)
-set   (GGML_OPENCL_TARGET_VERSION "300" CACHE STRING
+option(GGML_OPENCL_USE_ADRENO_KERNELS       "ggml: use optimized kernels for Adreno"          OFF)
+set   (GGML_OPENCL_TARGET_VERSION "220" CACHE STRING
                                             "gmml: OpenCL API version to target")
 
 # toolchain for vulkan-shaders-gen
