--- a/ggml/src/ggml-cpu/CMakeLists.txt
+++ b/ggml/src/ggml-cpu/CMakeLists.txt
@@ -103,7 +103,8 @@ function(ggml_add_cpu_backend_variant_impl tag_name)
                 endif()
                 if ("${ARM_MCPU_FLAG}" STREQUAL "")
                     set(ARM_MCPU_FLAG -mcpu=native)
-                    message(STATUS "ARM -mcpu not found, -mcpu=native will be used")
+                    # set(ARM_MCPU_FLAG -mcpu=cortex-a78ae)
+                    message(STATUS "ARM -mcpu not found, -mcpu=cortex-native will be used")
                 endif()
 
                 include(CheckCXXSourceRuns)
